turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:16: error: value % is not a member of java.awt.Color
  setCouleurBrosse(colors(pos+1)%taille);
                                ^